fix: Update assets to ones imported via the Aspects CLI

--- a/tutoraspects_extension/templates/aspects_extension/example-assets/dashboards/Example_Dashboard.yaml
+++ b/tutoraspects_extension/templates/aspects_extension/example-assets/dashboards/Example_Dashboard.yaml
@@ -1,13 +1,34 @@
-dashboard_title: Example Dashboard
+_file_name: Example_Dashboard.yaml
 _roles:
 - '{{ SUPERSET_ROLES_MAPPING.instructor }}'
-description: null
-css: ''
-slug: example-dashboard
-certified_by: ''
 certification_details: ''
-published: false
-uuid: 8ae7fafd-ca2c-4e98-a666-2cce99622212
+certified_by: ''
+css: ''
+dashboard_title: Example Dashboard
+description: null
+metadata:
+  chart_configuration:
+    '193':
+      crossFilters:
+        chartsInScope: []
+        scope: global
+      id: 193
+  color_scheme: ''
+  color_scheme_domain: []
+  cross_filters_enabled: true
+  default_filters: '{}'
+  expanded_slices: {}
+  global_chart_configuration:
+    chartsInScope:
+    - 193
+    scope:
+      excluded: []
+      rootPath:
+      - ROOT_ID
+  label_colors: {}
+  refresh_frequency: 0
+  shared_label_colors: {}
+  timed_refresh_immune_slices: []
 position:
   CHART-explore-193-1:
     children: []
@@ -52,27 +73,7 @@ position:
     - ROOT_ID
     - GRID_ID
     type: ROW
-metadata:
-  chart_configuration:
-    '193':
-      id: 193
-      crossFilters:
-        scope: global
-        chartsInScope: []
-  global_chart_configuration:
-    scope:
-      rootPath:
-      - ROOT_ID
-      excluded: []
-    chartsInScope:
-    - 193
-  color_scheme: ''
-  refresh_frequency: 0
-  expanded_slices: {}
-  label_colors: {}
-  timed_refresh_immune_slices: []
-  cross_filters_enabled: true
-  default_filters: '{}'
-  shared_label_colors: {}
-  color_scheme_domain: []
+published: false
+slug: null
+uuid: 8ae7fafd-ca2c-4e98-a666-2cce99622212
 version: 1.0.0
